--- a/app/src/main/res/layout/fragment_offline_trans.xml
+++ b/app/src/main/res/layout/fragment_offline_trans.xml
@@ -9,4 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.laskarsedekah.laskarsedekah.MainActivity$PlaceholderFragment">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/btn_radio" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="Masih kosong" />
 </LinearLayout>
