--- a/app/src/main/res/layout/fragment_online_trans.xml
+++ b/app/src/main/res/layout/fragment_online_trans.xml
@@ -30,13 +30,19 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
 
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/activity_main_swipe_refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="48dp">
         <ListView
-            android:paddingTop="10dp"
+
             android:id="@+id/lv_bank"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         </ListView>
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
 
