--- a/app/src/main/res/layout/list_bank.xml
+++ b/app/src/main/res/layout/list_bank.xml
@@ -4,15 +4,23 @@
     android:orientation="horizontal"
     android:padding="10dp">
 
+    <ImageView
+        android:id="@+id/iv_bank"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/ic_menu_manage" />
+
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/iv_bank"
         android:gravity="center_vertical"
         android:padding="2dip"
+        android:text="Kuda"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#736F6E"
         android:textSize="22sp"
@@ -22,12 +30,12 @@
         android:id="@+id/txtTitle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@id/txtTitle"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/iv_bank"
         android:gravity="center_vertical"
         android:padding="2dip"
+        android:text="kuda2"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#736F6E"
         android:textSize="12sp"
@@ -37,12 +45,12 @@
         android:id="@+id/txtTitle3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@id/txtTitle2"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/iv_bank"
         android:gravity="center_vertical"
         android:padding="2dip"
+        android:text="kuda3"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#736F6E"
         android:textSize="12sp"
